fix assay title wrap

--- a/src/components/Home/components/Ensayo/styles.scss
+++ b/src/components/Home/components/Ensayo/styles.scss
@@ -10,20 +10,21 @@
     border-radius: 4px;
 
     background-color: white;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
-
+ 
     .assay{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        width: inherit;
 
         .assay-header{
             display:flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
+
+            width: inherit;
 
             .header-content{
                 display:flex;
@@ -32,12 +33,13 @@
                     display:flex;
                     font-size: 32px;
                     color: black;
+                    word-break: break-all;
                 }
     
                 .state{
                     display:flex;
                     justify-content: center;
-
+                    width: 150px;
                    
                     font-size: 14px;
                     background-color:white;
